start fixing dark mode errors

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,6 +32,21 @@
     scrollbar-base-color: gray;
     scrollbar-width: 10px;
   }
+
+  .scroll-thin {
+    scrollbar-width: thin;
+    scrollbar-color: gray;
+  }
+
+  .scroll-thin::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+  .scroll-thin::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 10px;
+  }
+
   input[type="number"]::-webkit-outer-spin-button,
   input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
